<resources>
    <string name="app_name">MadventureZemerova</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title">Go to \nWorldSkills 2019</string>
    <string name="countsteps">10.000 steps</string>
    <string name="description">Description</string>
    <string name="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus metus at eleifend porttitor. Sed et urna ut nulla condimentum laoreet. Duis et velit ut leo varius blandit. Curabitur accumsan nisi eu leo tristique sollicitudin. Praesent vulputate odio ut porta sollicitudin. Ut accumsan elit orci, in congue turpis posuere ac.</string>
    <string name="sendresult">Send result</string>
</resources>