<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/picture"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:hint="@string/email"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:textColorHint="@color/aquamarine"
            android:background="@drawable/edittextstyle"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:hint="@string/password"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:textColorHint="@color/aquamarine"
            android:background="@drawable/edittextstyle"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/signin"
            android:textSize="16dp"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>